load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "csharp_nunit_test")
load("//:config.bzl", "assembly_version", "author", "version")
load("//tools/build:assembly_info.bzl", "csharp_assembly_info")
load("//tools/ServiceDefinitions:build.bzl", "service_definitions")

exports_files(["CHANGES.txt"])

filegroup(
    name = "core",
    srcs = [
        ":KRPC.Core",
        ":ServiceDefinitions",
    ],
    visibility = ["//:__pkg__"],
)

test_suite(
    name = "test",
    tests = [
        ":test-KRPC.Core",
    ],
)

genrule(
    name = "version",
    outs = ["VERSION.txt"],
    cmd = 'echo "%s" > "$@"' % version,
)

csharp_assembly_info(
    name = "AssemblyInfo",
    cls_compliant = False,
    copyright = author,
    description = "Core server functionality for kRPC",
    title = "KRPC.Core",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to //:csproj-deps so it can copy AssemblyInfo.cs to generated_deps
        "//tools/ServiceDefinitions:__pkg__",  # Make visible to ServiceDefinitions so it can build KRPC.Core.dll with .NET 4.5 references
    ],
)

# Make sources visible to ServiceDefinitions so it can build KRPC.Core.dll with .NET 4.5 references
filegroup(
    name = "KRPC.Core-src",
    srcs = glob(["src/**/*.cs"]),
    visibility = ["//tools/ServiceDefinitions:__pkg__"],
)

srcs = glob(["src/**/*.cs"]) + [
    ":AssemblyInfo",
    "//protobuf:csharp_unity",
]

deps = [
    "//tools/build/ksp:Google.Protobuf",
    "//tools/build/ksp:KRPC.IO.Ports",
]

csharp_library(
    name = "KRPC.Core",
    srcs = srcs,
    internals_visible_to = [
        "KRPC.Core.Test",
        "DynamicProxyGenAssembly2",
    ],
    target_frameworks = ["net472"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = deps,
)

# net8.0 build of KRPC.Core, for TestServer and the unit tests. This is a
# separate target rather than a multi-targeted KRPC.Core so that the default
# build flavor staged into the mod release archive stays net472.
csharp_library(
    name = "KRPC.Core.net8",
    srcs = glob(["src/**/*.cs"]) + [
        ":AssemblyInfo",
        "//protobuf:csharp",
    ],
    out = "KRPC.Core",
    internals_visible_to = [
        "KRPC.Core.Test",
        "DynamicProxyGenAssembly2",
    ],
    # CS1701: Google.Protobuf's net5.0 build references net5-era framework
    # assemblies; unification handles this at runtime (MSBuild suppresses
    # this warning by default)
    nowarn = ["CS1701"],
    target_frameworks = ["net8.0"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//tools/build/dotnet:Google.Protobuf",
        "//tools/build/dotnet:System.IO.Ports",
    ],
)

service_definitions(
    name = "ServiceDefinitions",
    out = "KRPC.Core.json",
    assemblies = [":KRPC.Core"],
    service = "KRPC",
    visibility = ["//visibility:public"],
)

csharp_assembly_info(
    name = "TestAssemblyInfo",
    cls_compliant = False,
    copyright = author,
    title = "KRPC.Core.Test",
    version = assembly_version,
    visibility = [
        "//:__pkg__",  # Make visible to krpc-genfiles so it can copy AssemblyInfo.cs to zip
    ],
)

csharp_nunit_test(
    name = "test-KRPC.Core",
    size = "small",
    srcs = glob(["test/**/*.cs"]) + [":TestAssemblyInfo"],
    out = "KRPC.Core.Test",
    defines = ["CODE_ANALYSIS"],
    # CS1701: Google.Protobuf/Newtonsoft.Json/Moq reference net5/6-era framework
    # assemblies; unification handles this at runtime (MSBuild suppresses this
    # warning by default). Matches KRPC.Core.net8 above.
    nowarn = [
        "CS1591",
        "CS1685",
        "CS1701",
    ],
    target_frameworks = ["net8.0"],
    visibility = ["//:__pkg__"],
    deps = [
        ":KRPC.Core.net8",
        "//tools/build/dotnet:Castle.Core",
        "//tools/build/dotnet:Google.Protobuf",
        "//tools/build/dotnet:Moq",
        "//tools/build/dotnet:Newtonsoft.Json",
        "//tools/build/dotnet:System.IO.Ports",
    ],
)
