load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("//:config.bzl", "version")
load("//doc:check_documented.bzl", "check_documented_test")
load("//doc:macros.bzl", "cc_binary_multiple", "csharp_library_multiple", "java_binary_multiple")
load("//tools/build:image.bzl", "png_images")
load("//tools/build:pkg.bzl", "stage_files")
load("//tools/build:python.bzl", "py_lint_test")
load("//tools/build:sphinx.bzl", "sphinx_build", "sphinx_linkcheck_test", "sphinx_spelling_test")
load("//tools/krpctools:changelog.bzl", "changeloggen")
load("//tools/krpctools:docgen.bzl", "docgen_multiple")

filegroup(
    name = "doc",
    srcs = [
        ":html",
        ":pdf",
    ],
)

stage_files(
    name = "srcs",
    srcs = glob([
        "src/**/*.rst",
        "src/images/**/*.png",
        "src/crafts/*.craft",
        "src/scripts/**/*.c",
        "src/scripts/**/*.ino",
        "src/scripts/**/*.cs",
        "src/scripts/**/*.cpp",
        "src/scripts/**/*.java",
        "src/scripts/**/*.lua",
        "src/scripts/**/*.py",
        "src/scripts/**/*.js",
    ]) + [
        "src/_static/build-info.js",
        "src/_static/custom.css",
        "src/_static/external-links.js",
        "src/_templates/build-info.html",
        "src/dictionary.txt",
        ":changelog",
        ":cnano-api",
        ":conf",
        ":cpp-api",
        ":csharp-api",
        ":images",
        ":java-api",
        ":lua-api",
        ":python-api",
    ],
    path_map = {
        "doc/src/": "",
    },
)

# Unified changelog page, merged from every component's CHANGELOG.md. The dict
# order below sets the per-version component order on the rendered page.
changeloggen(
    name = "changelog",
    out = "src/changelog.rst",
    components = {
        "//server:CHANGELOG.md": "Server",
        "//core:CHANGELOG.md": "Core",
        "//service/SpaceCenter:CHANGELOG.md": "SpaceCenter service",
        "//service/Drawing:CHANGELOG.md": "Drawing service",
        "//service/UI:CHANGELOG.md": "UI service",
        "//service/InfernalRobotics:CHANGELOG.md": "InfernalRobotics service",
        "//service/KerbalAlarmClock:CHANGELOG.md": "KerbalAlarmClock service",
        "//service/RemoteTech:CHANGELOG.md": "RemoteTech service",
        "//service/LiDAR:CHANGELOG.md": "LiDAR service",
        "//service/DockingCamera:CHANGELOG.md": "DockingCamera service",
        "//client/python:CHANGELOG.md": "Python client",
        "//client/csharp:CHANGELOG.md": "C# client",
        "//client/cpp:CHANGELOG.md": "C++ client",
        "//client/cnano:CHANGELOG.md": "C-nano client",
        "//client/java:CHANGELOG.md": "Java client",
        "//client/lua:CHANGELOG.md": "Lua client",
        "//tools/krpctools:CHANGELOG.md": "krpctools",
    },
)

py_console_script_binary(
    name = "sphinx-build",
    pkg = "@pypi//sphinx",
    script = "sphinx-build",
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//javalang",
        "@pypi//javasphinx",
        "@pypi//pydata_sphinx_theme",
        "@pypi//pyenchant",
        "@pypi//requests",
        "@pypi//sphinx_csharp",
        "@pypi//sphinx_tabs",
        "@pypi//sphinxcontrib_luadomain",
        "@pypi//sphinxcontrib_spelling",
    ],
)

# Live-build and serve the documentation website: `bazel run //doc:serve`.
# Bundles sphinx-autobuild + watchdog and the same sphinx extension set as the
# sphinx-build binary above, so the served rebuild finds every extension.
py_binary(
    name = "serve",
    srcs = ["serve_docs.py"],
    main = "serve_docs.py",
    deps = [
        "@pypi//javalang",
        "@pypi//javasphinx",
        "@pypi//pydata_sphinx_theme",
        "@pypi//pyenchant",
        "@pypi//requests",
        "@pypi//sphinx",
        "@pypi//sphinx_autobuild",
        "@pypi//sphinx_csharp",
        "@pypi//sphinx_tabs",
        "@pypi//sphinxcontrib_luadomain",
        "@pypi//sphinxcontrib_spelling",
        "@pypi//watchdog",
    ],
)

# Release builds carry a plain "x.y.z" version; CI stamps dev builds with a
# "-<build>-<sha>" suffix (the build-setup action's version step). A dev build is
# published under /dev/ and stamped "dev" so the theme's version switcher and
# old-version warning banner flag it as unreleased; a release publishes under
# /<version>/ stamped with its number. Deriving the channel from the version
# string keeps the docs in step with the version everything else builds with.
docs_version = "dev" if "-" in version else version

genrule(
    name = "conf",
    srcs = ["conf.py.tmpl"],
    outs = ["src/conf.py"],
    # %VERSION%/%SUBPATH% get the channel ('dev' or the release number). The
    # commit sha is deliberately not substituted in: it reaches a dev build's
    # footer at page-load time via build-info.json, keeping the HTML identical
    # from one commit to the next.
    cmd = "sed -e 's/%VERSION%/" + docs_version + "/g' -e 's/%SUBPATH%/" + docs_version + "/g' \"$<\" > \"$@\"",
)

sphinx_build(
    name = "html",
    srcs = [":srcs"],
    out = "html.zip",
    builder = "html",
    # Stamp -Dversion to match conf.py's version, so DOCUMENTATION_OPTIONS.VERSION
    # is "dev" for a dev build and the release number otherwise.
    opts = {"version": docs_version},
    sphinx_build = ":sphinx-build",
)

sphinx_build(
    name = "pdf",
    srcs = [":srcs"],
    out = "krpc-doc-%s.pdf" % version,
    builder = "latex",
    opts = {"version": version},
    sphinx_build = ":sphinx-build",
    # The latex->pdf step needs `make` and a LaTeX toolchain (texlive).
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//:__pkg__"],
)

png_images(
    name = "images",
    srcs = glob(["src/images/**/*.svg"]),
)

defs = [
    "//core:ServiceDefinitions",
    "//service/SpaceCenter:ServiceDefinitions",
    "//service/Drawing:ServiceDefinitions",
    "//service/InfernalRobotics:ServiceDefinitions",
    "//service/KerbalAlarmClock:ServiceDefinitions",
    "//service/RemoteTech:ServiceDefinitions",
    "//service/UI:ServiceDefinitions",
    "//service/LiDAR:ServiceDefinitions",
    "//service/DockingCamera:ServiceDefinitions",
]

docgen_multiple(
    name = "cnano-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "cnano",
    outdir = "src/cnano",
)

docgen_multiple(
    name = "csharp-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "csharp",
    outdir = "src/csharp",
)

docgen_multiple(
    name = "cpp-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "cpp",
    outdir = "src/cpp",
)

docgen_multiple(
    name = "java-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "java",
    outdir = "src/java",
)

docgen_multiple(
    name = "lua-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "lua",
    outdir = "src/lua",
)

docgen_multiple(
    name = "python-api",
    srcs = glob(["api/**/*.tmpl"]),
    defs = defs,
    language = "python",
    outdir = "src/python",
)

test_suite(
    name = "test",
    tests = [
        ":check-documented",
        ":check-scripts-mypy",
        ":lint",
        ":spelling",
    ],  # ':linkcheck'
)

# Type-check the Python example scripts against the typed client generated from
# this tree, so the examples cannot silently drift from the API. The C, C++, C#
# and Java examples are compile-checked by :compile-scripts; the Lua examples
# and BasicArduino.ino (which needs an Arduino toolchain) have no automated
# check.
py_test(
    name = "check-scripts-mypy",
    size = "medium",
    srcs = ["check_scripts_mypy.py"],
    data = glob(["src/scripts/**/*.py"]),
    # Without this, auto-generated __init__.py files in the runfiles tree make
    # mypy resolve the example scripts as packages rooted at the runfiles
    # directory, which is not a valid package name, and it aborts.
    legacy_create_init = False,
    main = "check_scripts_mypy.py",
    deps = [
        "//client/python:krpc_lib",
        "@pypi//mypy",
    ],
)

sphinx_spelling_test(
    name = "spelling",
    size = "medium",
    srcs = [":srcs"],
    opts = {"version": version},
    sphinx_build = ":sphinx-build",
    # Generated bash test wrapper (grep + writable-dictionary hack); convertible
    # to python later, but Linux-only for now.
    target_compatible_with = ["@platforms//os:linux"],
)

sphinx_linkcheck_test(
    name = "linkcheck",
    srcs = [":srcs"],
    opts = {"version": version},
    sphinx_build = ":sphinx-build",
    tags = ["requires-network"],
    # Generated bash test wrapper; convertible to python later, Linux-only now.
    target_compatible_with = ["@platforms//os:linux"],
)

test_suite(
    name = "check-documented",
    tests = [
        ":check-documented-cnano",
        ":check-documented-cpp",
        ":check-documented-csharp",
        ":check-documented-java",
        ":check-documented-lua",
        ":check-documented-python",
    ],
)

check_documented_test(
    name = "check-documented-cnano",
    size = "small",
    srcs = [":cnano-api"],
    members = "order.txt",
)

check_documented_test(
    name = "check-documented-csharp",
    size = "small",
    srcs = [":csharp-api"],
    members = "order.txt",
)

check_documented_test(
    name = "check-documented-cpp",
    size = "small",
    srcs = [":cpp-api"],
    members = "order.txt",
)

check_documented_test(
    name = "check-documented-java",
    size = "small",
    srcs = [":java-api"],
    members = "order.txt",
)

check_documented_test(
    name = "check-documented-lua",
    size = "small",
    srcs = [":lua-api"],
    members = "order.txt",
)

check_documented_test(
    name = "check-documented-python",
    size = "small",
    srcs = [":python-api"],
    members = "order.txt",
)

filegroup(
    name = "compile-scripts",
    srcs = [
        ":compile-scripts-cnano",
        ":compile-scripts-cpp",
        ":compile-scripts-csharp",
        ":compile-scripts-java",
    ],
)

filegroup(
    name = "compile-scripts-csharp",
    srcs = [
        ":compile-scripts-csharp-exes",
        ":compile-scripts-csharp-libs",
    ],
)

# The C example scripts include <unistd.h> for sleep(), so they only compile on
# POSIX hosts; the compile check is Linux-only. The C++ examples use portable
# <thread>, so compile-scripts-cpp stays cross-platform.
cc_binary_multiple(
    name = "compile-scripts-cnano",
    srcs = glob(["src/scripts/**/*.c"]),
    target_compatible_with = ["@platforms//os:linux"],
    deps = ["//client/cnano:krpc_cnano"],
)

# The example scripts are compiled as libraries; this only checks that they
# compile, they are never executed
csharp_library_multiple(
    name = "compile-scripts-csharp-exes",
    srcs = glob(
        ["src/scripts/**/*.cs"],
        exclude = ["src/scripts/**/*.lib.cs"],
    ),
    deps = [
        "//client/csharp:KRPC.Client",
        "//tools/build/dotnet:Google.Protobuf.net45",
    ],
)

csharp_library_multiple(
    name = "compile-scripts-csharp-libs",
    srcs = glob(["src/scripts/**/*.lib.cs"]),
    deps = [
        "//core:KRPC.Core",
        "//tools/build/ksp:Assembly-CSharp",
        "//tools/build/ksp:Assembly-CSharp-firstpass",
        "//tools/build/ksp:Google.Protobuf",
        "//tools/build/ksp:UnityEngine",
        "//tools/build/ksp:UnityEngine.AnimationModule",
        "//tools/build/ksp:UnityEngine.CoreModule",
        "//tools/build/ksp:UnityEngine.IMGUIModule",
        "//tools/build/ksp:UnityEngine.InputLegacyModule",
        "//tools/build/ksp:UnityEngine.UI",
    ],
)

cc_binary_multiple(
    name = "compile-scripts-cpp",
    srcs = glob(["src/scripts/**/*.cpp"]),
    deps = ["//client/cpp:krpc"],
)

java_binary_multiple(
    name = "compile-scripts-java",
    srcs = glob(["src/scripts/**/*.java"]),
    copts = [
        "-Werror",
        "-Xlint:all",
        "-target 1.9",
        "-source 1.9",
    ],
    deps = [
        "//client/java:krpc-jar",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_javatuples_javatuples",
    ],
)

test_suite(
    name = "lint",
    tests = [
        ":lint-python",
    ],
)

py_lint_test(
    name = "lint-python",
    size = "small",
    srcs = glob(["src/scripts/**/*.py"]),
    pylint_config = "src/scripts/pylint.rc",
)
